Moved up horizontal to avoid overlaping with vertical

--- a/src/app/views/main/main.component.scss
+++ b/src/app/views/main/main.component.scss
@@ -1137,7 +1137,7 @@ button {
     //   display: inline-table;
 
     position: relative;
-    top: -41px;
+    top: -47px;
     right: 43PX;
     display: inline-table;
     width: 0;
