--- a/src/app/views/oneThirdScreen/oneThirdScreen.component.scss
+++ b/src/app/views/oneThirdScreen/oneThirdScreen.component.scss
@@ -1019,7 +1019,7 @@
     //   display: inline-table;
 
     position: relative;
-    top: -41px;
+    top: -47px;
     right: 41PX;
     display: inline-table;
     width: 0;
